[package]
description = "Parity IPFS-compatible API"
name = "parity-ipfs-api"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethcore = { path = "../ethcore" }
parity-bytes = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
ethereum-types = "0.3"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
rlp = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
cid = "0.2"
multihash = "0.8"
unicase = "2.0"

[dev-dependencies]
ethcore = { path = "../ethcore", features = ["test-helpers"] }
