[package]
name = "ethcore-transaction"
description = "Transaction type"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethjson = { path = "../../json" }
ethkey = { path = "../../ethkey" }
evm = { path = "../evm" }
heapsize = "0.4"
keccak-hash = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
rlp = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
unexpected = { path = "../../util/unexpected" }
ethereum-types = "0.3"

[dev-dependencies]
rustc-hex= "1.0"

[features]
json-tests = []
