[package]
name = "common-types"
description = "Common types used throughout the codebase"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rlp = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
rlp_derive = { path = "../../util/rlp_derive" }
parity-bytes = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
ethereum-types = "0.3"
ethjson = { path = "../../json" }
keccak-hash = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
heapsize = "0.4"

[dev-dependencies]
rustc-hex= "1.0"
