[package]
name = "vm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
byteorder = "1.0"
parity-bytes = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
ethereum-types = "0.3"
patricia-trie = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
patricia-trie-ethereum = { path = "../../util/patricia-trie-ethereum" }
log = "0.4"
common-types = { path = "../types" }
ethjson = { path = "../../json" }
rlp = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
keccak-hash = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
