[package]
name = "keccak-hasher"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Keccak-256 implementation of the Hasher trait"
license = "GPL-3.0"

[dependencies]
ethereum-types = "0.3"
tiny-keccak = "1.4.2"
hashdb = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
plain_hasher = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }