[package]
name = "triehash-ethereum"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Trie-root helpers, ethereum style"
license = "GPL-3.0"

[dependencies]
triehash = { git = "https://github.com/c0gent/parity-common", branch = "ring-0.13" }
ethereum-types = "0.3"
keccak-hasher = { path = "../keccak-hasher" }